--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   
   <title>Frontend Mentor | Digitalbank landing page</title>
 
@@ -16,76 +19,67 @@
   </style>
 </head>
 <body>
-  <div class="navbar">
-    <div class="logo">
-      <img src="./images/logo-dark.svg" alt="Digitalbank logo">
-    </div>
-    <ul class="nav-list">
-      <li>Home</li>
-      <li>About</li>
-      <li>Contact</li>
-      <li>Blog</li>
-      <li>Careers</li>
-    </ul>
-  </div>
+  <main>
+    <header>
+      <div class="navbar">
+        <div class="logo">
+          <img src="./images/logo-dark.svg" alt="Digitalbank logo">
+        </div>
+        <ul class="nav-list">
+          <li><a href="">Home</a></li>
+          <li><a href="">About</a></li>
+          <li><a href="">Contact</a></li>
+          <li><a href="">Blog</a></li>
+          <li><a href="">Careers</a></li>
+        </ul>
+        <button class="request-btn">Request Invite</button>
+      </div>
+    </header>
 
-  Request Invite
+    <section class="hero">
+      <h2 class="hero-main">Next generation digital banking</h2>
+      <p class="hero-text">
+        Take your financial life online. Your Digitalbank account will be a one-stop-shop
+        for spending, saving, budgeting, investing, and much more.
+      </p>
+      <button class="request-btn">Request Invite</button>
+    </section>
 
-
-
-  Next generation digital banking
-
-  Take your financial life online. Your Digitalbank account will be a one-stop-shop 
-  for spending, saving, budgeting, investing, and much more.
-
-  Request Invite
-
-
-
-  Why choose Digitalbank?
-
-  We leverage Open Banking to turn your bank account into your financial hub. Control 
-  your finances like never before.
-
-  Online Banking
-  Our modern web and mobile applications allow you to keep track of your finances 
-  wherever you are in the world.
-
-  Simple Budgeting
-  See exactly where your money goes each month. Receive notifications when you’re 
-  close to hitting your limits.
-
-  Fast Onboarding
-  We don’t do branches. Open your account in minutes online and start taking control 
-  of your finances right away.
-
-  Open API
-  Manage your savings, investments, pension, and much more from one account. Tracking 
-  your money has never been easier.
-
-  
-
-  Latest Articles
-
-  By Claire Robinson
-  Receive money in any currency with no fees
-  The world is getting smaller and we’re becoming more mobile. So why should you be 
-  forced to only receive money in a single …
-
-  By Wilson Hutton
-  Treat yourself without worrying about money
-  Our simple budgeting feature allows you to separate out your spending and set 
-  realistic limits each month. That means you …
-
-  By Wilson Hutton
-  Take your Digitalbank card wherever you go
-  We want you to enjoy your travels. This is why we don’t charge any fees on purchases 
-  while you’re abroad. We’ll even show you …
-
-  By Claire Robinson
-  Our invite-only Beta accounts are now live!
-  After a lot of hard work by the whole team, we’re excited to launch our closed beta. 
-  It’s easy to request an invite through the site ...
+    
+    Why choose Digitalbank?
+    We leverage Open Banking to turn your bank account into your financial hub. Control
+    your finances like never before.
+    Online Banking
+    Our modern web and mobile applications allow you to keep track of your finances
+    wherever you are in the world.
+    Simple Budgeting
+    See exactly where your money goes each month. Receive notifications when you’re
+    close to hitting your limits.
+    Fast Onboarding
+    We don’t do branches. Open your account in minutes online and start taking control
+    of your finances right away.
+    Open API
+    Manage your savings, investments, pension, and much more from one account. Tracking
+    your money has never been easier.
+    
+    Latest Articles
+    By Claire Robinson
+    Receive money in any currency with no fees
+    The world is getting smaller and we’re becoming more mobile. So why should you be
+    forced to only receive money in a single …
+    By Wilson Hutton
+    Treat yourself without worrying about money
+    Our simple budgeting feature allows you to separate out your spending and set
+    realistic limits each month. That means you …
+    By Wilson Hutton
+    Take your Digitalbank card wherever you go
+    We want you to enjoy your travels. This is why we don’t charge any fees on purchases
+    while you’re abroad. We’ll even show you …
+    By Claire Robinson
+    Our invite-only Beta accounts are now live!
+    After a lot of hard work by the whole team, we’re excited to launch our closed beta.
+    It’s easy to request an invite through the site ...
+  </main>
 
   
 
