--- a/index.html
+++ b/index.html
@@ -63,26 +63,61 @@
         <img class="hero-svg" src="./images/bg-intro-desktop.svg" alt="" />
       </section>
 
-      Why choose Digitalbank? We leverage Open Banking to turn your bank account
-      into your financial hub. Control your finances like never before. Online
-      Banking Our modern web and mobile applications allow you to keep track of
-      your finances wherever you are in the world. Simple Budgeting See exactly
-      where your money goes each month. Receive notifications when you’re close
-      to hitting your limits. Fast Onboarding We don’t do branches. Open your
-      account in minutes online and start taking control of your finances right
-      away. Open API Manage your savings, investments, pension, and much more
-      from one account. Tracking your money has never been easier. Latest
-      Articles By Claire Robinson Receive money in any currency with no fees The
-      world is getting smaller and we’re becoming more mobile. So why should you
-      be forced to only receive money in a single … By Wilson Hutton Treat
-      yourself without worrying about money Our simple budgeting feature allows
-      you to separate out your spending and set realistic limits each month.
-      That means you … By Wilson Hutton Take your Digitalbank card wherever you
-      go We want you to enjoy your travels. This is why we don’t charge any fees
-      on purchases while you’re abroad. We’ll even show you … By Claire Robinson
-      Our invite-only Beta accounts are now live! After a lot of hard work by
-      the whole team, we’re excited to launch our closed beta. It’s easy to
-      request an invite through the site ...
+      <section class="info-section">
+        <div>
+          <h3 class="subheading">Why choose Digitalbank?</h3>
+          <p>We leverage Open Banking to turn your bank account into your financial hub.</p>
+          <p>Control your finances like never before.</p>
+        </div>
+        <div class="card-container">
+          <div class="info-card">
+            <img src="./images/icon-online.svg" alt="">
+            <h4>Online Banking</h4> 
+            <p>
+              Our modern web and mobile applications allow you to keep track of
+              your finances wherever you are in the world.
+            </p>
+          </div>
+          <div class="info-card">
+            <img src="images/icon-budgeting.svg" alt="">
+            <h4>Simple Budgeting</h4> 
+            <p>
+              See exactly where your money goes each month. Receive notifications when you’re close
+              to hitting your limits.
+            </p>
+          </div>
+          <div class="info-card">
+            <img src="images/icon-onboarding.svg" alt="">
+            <h4>Fast Onboarding</h4> 
+            <p>
+              We don’t do branches. Open your account in minutes online and start taking control of your finances right
+              away.
+            </p>
+          </div>
+          <div class="info-card">
+            <img src="images/icon-api.svg" alt="">
+            <h4>Open API</h4> 
+            <p>
+              Manage your savings, investments, pension, and much more
+              from one account. Tracking your money has never been easier.
+            </p>
+          </div>
+        </div>
+      </section>
+      <section class="posts">
+        <h3 class="subheading">Latest</h3>
+        Articles By Claire Robinson Receive money in any currency with no fees The
+        world is getting smaller and we’re becoming more mobile. So why should you
+        be forced to only receive money in a single … By Wilson Hutton Treat
+        yourself without worrying about money Our simple budgeting feature allows
+        you to separate out your spending and set realistic limits each month.
+        That means you … By Wilson Hutton Take your Digitalbank info-card wherever you
+        go We want you to enjoy your travels. This is why we don’t charge any fees
+        on purchases while you’re abroad. We’ll even show you … By Claire Robinson
+        Our invite-only Beta accounts are now live! After a lot of hard work by
+        the whole team, we’re excited to launch our closed beta. It’s easy to
+        request an invite through the site ...
+      </section>
     </main>
 
     About Us Contact
