--- a/index.html
+++ b/index.html
@@ -66,64 +66,105 @@
       <section class="info-section">
         <div>
           <h3 class="subheading">Why choose Digitalbank?</h3>
-          <p>We leverage Open Banking to turn your bank account into your financial hub.</p>
+          <p>
+            We leverage Open Banking to turn your bank account into your
+            financial hub.
+          </p>
           <p>Control your finances like never before.</p>
         </div>
         <div class="card-container">
           <div class="info-card">
-            <img src="./images/icon-online.svg" alt="">
-            <h4>Online Banking</h4> 
+            <img src="./images/icon-online.svg" alt="" />
+            <h4>Online Banking</h4>
             <p>
               Our modern web and mobile applications allow you to keep track of
               your finances wherever you are in the world.
             </p>
           </div>
           <div class="info-card">
-            <img src="images/icon-budgeting.svg" alt="">
-            <h4>Simple Budgeting</h4> 
+            <img src="images/icon-budgeting.svg" alt="" />
+            <h4>Simple Budgeting</h4>
             <p>
-              See exactly where your money goes each month. Receive notifications when you’re close
-              to hitting your limits.
+              See exactly where your money goes each month. Receive
+              notifications when you’re close to hitting your limits.
             </p>
           </div>
           <div class="info-card">
-            <img src="images/icon-onboarding.svg" alt="">
-            <h4>Fast Onboarding</h4> 
+            <img src="images/icon-onboarding.svg" alt="" />
+            <h4>Fast Onboarding</h4>
             <p>
-              We don’t do branches. Open your account in minutes online and start taking control of your finances right
-              away.
+              We don’t do branches. Open your account in minutes online and
+              start taking control of your finances right away.
             </p>
           </div>
           <div class="info-card">
-            <img src="images/icon-api.svg" alt="">
-            <h4>Open API</h4> 
+            <img src="images/icon-api.svg" alt="" />
+            <h4>Open API</h4>
             <p>
-              Manage your savings, investments, pension, and much more
-              from one account. Tracking your money has never been easier.
+              Manage your savings, investments, pension, and much more from one
+              account. Tracking your money has never been easier.
             </p>
           </div>
         </div>
       </section>
       <section class="posts">
-        <h3 class="subheading">Latest</h3>
-        Articles By Claire Robinson Receive money in any currency with no fees The
-        world is getting smaller and we’re becoming more mobile. So why should you
-        be forced to only receive money in a single … By Wilson Hutton Treat
-        yourself without worrying about money Our simple budgeting feature allows
-        you to separate out your spending and set realistic limits each month.
-        That means you … By Wilson Hutton Take your Digitalbank info-card wherever you
-        go We want you to enjoy your travels. This is why we don’t charge any fees
-        on purchases while you’re abroad. We’ll even show you … By Claire Robinson
-        Our invite-only Beta accounts are now live! After a lot of hard work by
-        the whole team, we’re excited to launch our closed beta. It’s easy to
-        request an invite through the site ...
+        <h3 class="subheading">Latest Articles</h3>
+        <div class="articles-container">
+          <div class="article-card">
+            <img src="images/image-currency.jpg" alt="currency" />
+            <div class="article-info">
+              <span class="card-meta">By Claire Robinson</span>
+              <h4>Receive money in any currency with no fees</h4>
+              <p>
+                The world is getting smaller and we’re becoming more mobile. So
+                why should you be forced to only receive money in a single …
+              </p>
+            </div>
+          </div>
+          <div class="article-card">
+            <img src="images/image-restaurant.jpg" alt="restaurant meal" />
+            <div class="article-info">
+              <span class="card-meta">By Wilson Hutton</span>
+              <h4>Treat yourself without worrying about money</h4>
+              <p>
+                Our simple budgeting feature allows you to separate out your
+                spending and set realistic limits each month. That means you …
+              </p>
+            </div>
+          </div>
+          <div class="article-card">
+            <img src="images/image-plane.jpg" alt="plane wing" />
+            <div class="article-info">
+              <span class="card-meta">By Wilson Hutton</span>
+              <h4>Take your Digitalbank info-card wherever you go</h4>
+              <p>
+                We want you to enjoy your travels. This is why we don’t charge
+                any fees on purchases while you’re abroad. We’ll even show you …
+              </p>
+            </div>
+          </div>
+          <div class="article-card">
+            <img src="images/image-confetti.jpg" alt="" />
+            <div class="article-info">
+              <span class="card-meta">By Claire Robinson</span>
+              <h4>Our invite-only Beta accounts are now live!</h4>
+              <p>
+                After a lot of hard work by the whole team, we’re excited to
+                launch our closed beta. It’s easy to request an invite through
+                the site ...
+              </p>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
 
-    About Us Contact
-    <li>Blog</li>
-    Careers Support Privacy Policy Request Invite © Digitalbank. All Rights
-    Reserved
+    <footer>
+      About Us Contact
+      <li>Blog</li>
+      Careers Support Privacy Policy Request Invite © Digitalbank. All Rights
+      Reserved
+    </footer>
 
     <div class="attribution">
       Challenge by
