Desktop UI is complete

--- a/index.html
+++ b/index.html
@@ -19,18 +19,7 @@
       rel="stylesheet"
     />
 
-    <title>Digitalbank landing page</title>
-
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
+    <title>DigitalBank</title>
   </head>
   <body>
     <main>
@@ -160,17 +149,46 @@
     </main>
 
     <footer>
-      About Us Contact
-      <li>Blog</li>
-      Careers Support Privacy Policy Request Invite © Digitalbank. All Rights
-      Reserved
+      <div class="socials-footer">
+        <div class="logo">
+          <img src="images/logo-light.svg" alt="" />
+        </div>
+        <div class="social-logos">
+          <img src="images/icon-facebook.svg" alt="" />
+          <img src="images/icon-youtube.svg" alt="" />
+          <img src="images/icon-twitter.svg" alt="" />
+          <img src="images/icon-pinterest.svg" alt="" />
+          <img src="images/icon-instagram.svg" alt="" />
+        </div>
+      </div>
+      <ul>
+        <li><a href="">About Us</a></li>
+        <li><a href="">Contact</a></li>
+        <li><a href="">Blog</a></li>
+      </ul>
+      <ul>
+        <li><a href="">Careers</a></li>
+        <li><a href="">Support</a></li>
+        <li><a href="">Privacy Policy</a></li>
+      </ul>
+      <div class="footer-btns">
+        <button class="request-btn">Request Invite</button>
+        <span>© Digitalbank. All Rights Reserved</span>
+      </div>
     </footer>
 
     <div class="attribution">
       Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+      <a
+        href="https://www.frontendmentor.io?ref=challenge"
+        target="_blank"
+        rel="noopener noreferrer"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
+      >
+      Coded by
+      <a href="https://https://github.com/Agoth24" target="blank"
+        ><strong>Agoth Arop</strong></a
+      >.
     </div>
   </body>
 </html>
