Fixed github link in footer

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
         >Frontend Mentor</a
       >
       Coded by
-      <a href="https://https://github.com/Agoth24" target="blank"
+      <a href="https://www.github.com/Agoth24" target="blank"
         ><strong>Agoth Arop</strong></a
       >.
     </div>
